<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bgColor"
    tools:context=".QuizzActivity">

    <TextView
        android:id="@+id/acierto"
        android:layout_width="130pt"
        android:layout_height="30pt"
        android:layout_gravity="center|right"
        android:gravity="center|right"
        android:text="@string/Acierto"
        android:textAlignment="center"
        android:textColor="@color/colorRight"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32999998" />


    <TextView
        android:id="@+id/fallo"
        android:layout_width="130pt"
        android:layout_height="30pt"
        android:layout_gravity="center|right"
        android:gravity="center|right"
        android:text="@string/Fallo"
        android:textAlignment="center"
        android:textColor="@color/colorWrong"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32999998" />


    <TextView
        android:id="@+id/id_pregunta"
        android:layout_width="334dp"
        android:layout_height="128dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_horizontal"
        android:text="¿Cuál podría ser una parte de la bandera de Brasil?"
        android:textAlignment="center"
        android:textColor="?attr/textColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/next_question"
        android:layout_width="120dp"
        android:layout_height="46dp"
        android:background="@drawable/drawable"
        android:enabled="true"
        android:onClick="nextQuestion"
        android:text="@string/Next"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.948" />

    <Button
        android:id="@+id/repeat"
        android:layout_width="120dp"
        android:layout_height="46dp"
        android:background="@drawable/drawable"
        android:enabled="true"
        android:onClick="restart"
        android:text="@string/Repeat"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.948" />


    <RadioGroup
        android:id="@+id/GroupId"
        android:layout_width="363dp"
        android:layout_height="240dp"
        android:clickable="false"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_pregunta"
        app:layout_constraintVertical_bias="0.441">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:buttonTint="#010315"
            android:drawableEnd="@drawable/brasil"
            android:enabled="true"
            android:text="brasil"
            android:textAlignment="center"
            android:textColor="?attr/textColor" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:buttonTint="#010315"
            android:drawableEnd="@drawable/mexico"
            android:tag="false"
            android:textAlignment="center"
            android:textColor="?attr/textColor" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:buttonTint="#010315"
            android:drawableEnd="@drawable/nicaragua"
            android:tag="false"
            android:textAlignment="center"
            android:textColor="?attr/textColor" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:buttonTint="#010315"
            android:drawableEnd="@drawable/venezuela"
            android:tag="false"
            android:textAlignment="center"
            android:textColor="?attr/textColor" />
    </RadioGroup>

    <Button
        android:id="@+id/comprobar"
        android:layout_width="120dp"
        android:layout_height="46dp"
        android:background="@drawable/drawable"
        android:onClick="checkCorrectAnswer"
        android:text="Comprobar"
        android:layout_gravity="center_horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GroupId"
        app:layout_constraintVertical_bias="0.325"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>
